# rqr

./: Cargo.toml  README.md
examples/: customize.rs  generate_svg.rs  simple.rs  to_string.rs
rqr/: Cargo.toml
rqr-cli/: Cargo.toml
rqr-cli/src/: main.rs
rqr/src/: block_info.rs  builder.rs  data.rs  data_encoding.rs  ec.rs  ec_encoding.rs  encoding.rs  format.rs  lib.rs  mask.rs  matrix.rs  mode.rs  qr.rs  render.rs  version.rs
src/: builder.rs  data.rs  ec.rs  info.rs  lib.rs  main.rs  mask.rs  matrix.rs  mode.rs  qr.rs  render.rs  version.rs
