[package]
name = "rqr"
version = "0.1.0"
authors = ["Jonas Hietala <mail@jonashietala.se>"]
edition = "2018"

[dependencies]
regex = "1"
bitvec = "0.10"
lazy_static = "1.0"
clap = { version = "~2.27.0", default-features = false, optional = true }

[lib]
name = "rqr"

[features]
cli = ["clap"]

[[bin]]
name = "rqr"
required-features = ["cli"]
